ZDEBUG-369 Fix Image Stretch on BLog Posts

--- a/src/assets/sass/_blog_article_page.scss
+++ b/src/assets/sass/_blog_article_page.scss
@@ -60,7 +60,7 @@
     }
     .article-img {
       display: block;
-      width: 100%;
+      max-width: 100%;
       max-height: 400px;
       background-size: auto;
       margin: 0 auto 0;
