--- a/src/assets/sass/_bloggers_profile.scss
+++ b/src/assets/sass/_bloggers_profile.scss
@@ -83,7 +83,7 @@
 
   .article-img {
     display: block;
-    width: 100%;
+    max-width: 100%;
     max-height: 400px;
     background-size: contain;
     margin: 0 auto 20px;
